[tool.poetry]
name = "onnx-diffusion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "onnx_diffusion"}]

[tool.poetry.dependencies]
python = "3.10.6"
diffusers = "^0.16.1"
transformers = "^4.29.2"
onnxruntime = "^1.15.0"
onnx = "^1.14.0"
torch = "^2.0.1"
gradio = "^3.32.0"
scipy = "^1.10.1"
ftfy = "^6.1.1"
omegaconf = "^2.3.0"
spacy = "^3.5.3"
accelerate = "^0.19.0"
opencv-python = "^4.7.0.72"
controlnet-aux = "^0.0.5"
ort-nightly-directml = "1.11.0.dev20220320001"
onnxruntime-directml = "^1.15.0"
matplotlib = "^3.7.1"
pillow = "^9.5.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.11.0"
keras-cv = "0.5.0"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.3"
jupyter = "^1.0.0"
lab = "^7.3"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
